--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "admin": "^1.4.1",
     "ra-data-simple-rest": "^3.19.10",
+    "ra-i18n-polyglot": "^4.0.0",
     "react": "^17.0.2",
     "react-admin": "^3.19.10",
     "react-dom": "^17.0.2"
