--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "admin": "^1.4.1",
-    "ra-data-simple-rest": "^3.19.10",
-    "react": "^17.0.2",
-    "react-admin": "^3.19.10",
-    "react-dom": "^17.0.2"
+    "jss-rtl": "^0.3.0",
+    "ra-data-simple-rest": "^4.0.1",
+    "react": "^18.0.0",
+    "react-admin": "^4.0.1",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
