--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/styles": "^5.6.2",
     "admin": "^1.4.1",
-    "jss-rtl": "^0.3.0",
     "ra-data-simple-rest": "^4.0.1",
     "react": "^18.0.0",
     "react-admin": "^4.0.1",
