--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.29.0",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-paper": "^4.12.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
