--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/x-date-pickers": "^5.0.0-alpha.4",
     "admin": "^1.4.1",
     "ra-data-simple-rest": "^3.19.10",
     "react": "^17.0.2",
