--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "@reduxjs/toolkit": "^1.8.1",
@@ -23,14 +24,16 @@
     "expo-status-bar": "~1.2.0",
     "i18n-js": "^3.9.2",
     "i18next": "^21.6.14",
+    "query-string": "^7.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.29.0",
     "react-native": "0.64.3",
     "react-native-date-picker": "^4.2.2",
-    "react-native-gesture-handler": "^2.3.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "~2.3.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
