--- a/mobile/package.json
+++ b/mobile/package.json
@@ -32,12 +32,14 @@
     "react-native-date-picker": "^4.2.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
     "react-native-select-dropdown": "^1.13.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
