--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "ra-data-simple-rest": "^3.19.10",
     "react": "^17.0.2",
     "react-admin": "^4.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
