--- a/server/package.json
+++ b/server/package.json
@@ -28,8 +28,10 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
+    "request": "^2.88.2",
     "swagger-jsdoc": "^6.2.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "vimeo": "^2.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
